@@ -1,3 +1,6 @@
+Aug 08, 2024
+  SSSOMGenerator: added generation of RDO to MIM file
+
 Jul 29, 2024
   added EfoXrefGenerator to generate reciprocal EFO xrefs for VT, MP, HP, CMP and RDO ontologies
 
